# MacBenchForge

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  SECURITY.md  config.toml  test_downloads  test_downloads.cpp  test_scan  test_scan.cpp
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
docs/: architecture.md  contributing.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: api.js  benchmark.js  charts.js  export.js  hf_browser.js  history.js  main.js  wizard.js
packaging/: AppIcon.icns  Info.plist  create_dmg.sh
src/: main.cpp
src/app/: native_window.h  native_window.mm
src/benchmark/: metrics.cpp  metrics.hpp  runner.cpp  runner.hpp
src/config/: config.cpp  config.hpp
src/db/: crud.cpp  crud.hpp  database.cpp  database.hpp  models.hpp
src/discovery/: scanner.cpp  scanner.hpp
src/export/: exporter.cpp  exporter.hpp
src/hardware/: hw_info.cpp  hw_info.hpp
src/huggingface/: downloader.cpp  downloader.hpp  hf_client.cpp  hf_client.hpp
src/server/: routes.cpp  routes.hpp  server.cpp  server.hpp
website/: index.html  script.js  style.css
